adjusted and added scrape points

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -102,17 +102,36 @@ spring_exponential_fix = 1; Activates MSFS new spring formula
 ;14 The airspeed limit for gears retraction, in kias.
 ;15 Airspeed above which gear is damaged, in kias.
 ;16 The exponential constant for springs
-point.0 = 1, 100.0, 0, -15.15, 800, 0, 2.239, 70, 1.2947673642672, 1.20481927710843, 0.5, 17, 15, 0, 0, 0, 4
+point.0 = 1, 100.0, 0, -15.15, 800, 0, 2.239, 70, 1.2947673642672, 1.20481927710843, 0.5, 17, 15, 0, 0, 0, 4 ; 1 - 4 Wheels
 point.1 = 1, -6, -8.5, -15.4, 1200, 1, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
 point.2 = 1, -6, 8.5, -15.4, 1200, 2, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
 point.3 = 1, 3.84, -20.5, -15.25, 1200, 1, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
 point.4 = 1, 3.84, 20.5, -15.25, 1200, 2, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
-point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
-point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
-point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
-point.8 = 2, 44.07, 0, 2, 720, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 1
-point.9 = 2, -68, 0, 4.1, 100, 0, 0, 0, 0, 0, 0, 0, 0, 7, 0, 0, 1
-point.10 = 2, -75.2, 0, 32.3, 100, 0, 0, 0, 0, 0, 0, 0, 0, 8, 0, 0, 1
+point.5 = 2,-54.372955,-131.021927,10.820468,100,0,0.0001,0,0.0001,0.0001,0,0,0,5,0,0,1 ; LH wingtip winglet upper
+point.6 = 2,-50.870247,-130.862106,3.313592,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; LH wingtip winglet lower
+point.7 = 2,-35.461044,-127.075348,7.945578,100,0,0.0001,0,0.0001,0.0001,0,0,0,7,0,0,1 ; LH wingtip leading edge
+point.8 = 2,5.327537,-83.864761,-8.689222,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; #1 Engine pod
+point.9 = 2,15.712262,-84.2117,-1.475646,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; #1 Engine cowl lip
+point.10 = 2,33.315075,-48.682236,-10.257178,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; #2 Engine Pod
+point.11 = 2,41.815704,-48.664852,-4.112969,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; #2 Engine cowl lip
+point.12 = 2,-54.033611,131.017242,11.949392,100,0,0.0001,0,0.0001,0.0001,0,0,0,6,0,0,1 ; RH wingtip winglet upper
+point.13 = 2,-50.818611,130.104797,3.71358,100,0,0.0001,0,0.0001,0.0001,0,0,0,9,0,0,1 ; RH wingtip winglet lower
+point.14 = 2,-35.681446,127.477089,7.913722,720,100,0.0001,0,0.0001,0.0001,0,0,0,4,0,0,1 ; RH wingtip leading edge
+point.15 = 2,34.689693,48.535751,-10.585604,100,0,0.0001,0,0.0001,0.0001,0,0,0,8,0,0,1 ; #3 Engine Pod
+point.16 = 2,43.820728,49.039993,-3.867688,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; #3 Engine cowl lip
+point.17 = 2,8.460649,84.870743,-7.941256,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; #4 Engine Pod
+point.18 = 2,16.026669,84.646675,-1.931357,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; #4 Engine cowl lip
+point.19 = 2,115.108871,-0.000005,2.452346,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; Nose radome
+point.20 = 2,-123.276573,0.475531,66.496658,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; Tail Rudder tip
+point.21 = 2,-123.128021,-49.186314,17.529671,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; Tail LH Elevator tip
+point.22 = 2,-123.694473,49.301842,17.475616,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; Tail RH Elevator tip
+point.23 = 2,-72.402222,0.00001,0.002656,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; Body tailstrike location
+point.24 = 2,-0.000136,-0.000016,-7.930269,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; Body extents below reference point
+point.25 = 2,88.42083,0.000009,-5.299597,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; Body extents behind nosewheel
+point.26 = 2,51.916637,-16.119665,0.962626,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; LH wing root leading edge
+point.27 = 2,51.916588,16.858376,0.962659,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; RH wing root leading edge
+point.28 = 2,79.979874,-0.000016,21.776155,100,0,0.0001,0,1,0.0001,0,0,0,0,0,0,1 ; Body fueslage top behind cockpit
+
 
 [FUEL]
 fuel_type = 2 ; 1 = OCTANE 100, 2 = JET_A, 3 = OCTANE 80, 4 = AUTO GAS, 5 = JET B
