--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -24,9 +24,9 @@ minor = 0
 ; Maximum Landing Weight (MLW) 395,000 kg, 870,826 lb
 ; Maximum Zero Fuel Weight (MZFW) 373,000 kg, 822,324 lb (360,000 kg/793,663 lb at fwd CG)
 max_gross_weight = 1124355 ; Max takeoff weight, (LBS)
-empty_weight = 629023; Empty weight, (LBS)
+empty_weight = 661403; Empty weight, (LBS)
 reference_datum_position = 0, 0, 0 ; Position of reference datum relative to FS(0,0,0) (FEET), z, x, y
-empty_weight_CG_position = 5.52, 0, 2.8 ; Position of airplane empty weight CG relative to reference datum (FEET), z, x, y Should give empty weight cg of 36.2%RC
+empty_weight_CG_position = 6.47, 0, 2.8 ; Position of airplane empty weight CG relative to reference datum (FEET), z, x, y Should give empty weight cg of 36.2%RC
 CG_forward_limit = 0.28 ; Gravity center forward limit (longitudinal offset) for longitudinal stability
 CG_aft_limit = 0.44 ; Gravity center after limit (longitudinal offset z) w.r.t reference datum for longitudinal stability (FEET)
 empty_weight_pitch_MOI = 79112140 ; Empty pitch moment of inertia, Jxx (SLUG SQ FEET)
@@ -102,11 +102,13 @@ spring_exponential_fix = 1; Activates MSFS new spring formula
 ;14 The airspeed limit for gears retraction, in kias.
 ;15 Airspeed above which gear is damaged, in kias.
 ;16 The exponential constant for springs
-point.0 = 1, 100.0, 0, -15.15, 800, 0, 2.239, 70, 1.2947673642672, 1.20481927710843, 0.5, 17, 15, 0, 0, 0, 4
-point.1 = 1, -6, -8.5, -15.4, 1200, 1, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
-point.2 = 1, -6, 8.5, -15.4, 1200, 2, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
-point.3 = 1, 3.84, -20.5, -15.25, 1200, 1, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
-point.4 = 1, 3.84, 20.5, -15.25, 1200, 2, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
+
+; WLG, BLG z-positions should be 5.3ft, -5.45ft according to the WBM, but this is slightly adjusted to visually match the model.
+point.0 = 1, 99.15, 0, -15.15, 800, 0, 2.239, 70, 1.2947673642672, 1.20481927710843, 0.5, 17, 15, 0, 0, 0, 4
+point.1 = 1, -5.7, -8.5, -15.4, 1200, 1, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
+point.2 = 1, -5.7, 8.5, -15.4, 1200, 2, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
+point.3 = 1, 5.7, -20.5, -15.18, 1200, 1, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
+point.4 = 1, 5.7, 20.5, -15.18, 1200, 2, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
 point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
@@ -124,17 +126,17 @@ Engine.1 = Name:LeftOuterEngine#Index:1
 Engine.2 = Name:LeftInnerEngine#Index:2
 Engine.3 = Name:RightInnerEngine#Index:3
 Engine.4 = Name:RightOuterEngine#Index:4
-Tank.1 = Name:LeftOuter#Title:TT:MENU.FUEL.LEFT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.7,-100.0,8.5#Priority:2#OutputOnlyLines:LeftOuterTankToLeftOuterTankPump,LeftOuterTankToLeftOuterEmerXferValve
-Tank.2 = Name:Feed1#Title:TT:MENU.FUEL.FEED_ONE#Capacity:7299.6#UnusableCapacity:0#Position:-8.2,-71.0,7.3#Priority:5#InputOnlyLines:FeedTank1FwdXferValve1ToFeedTank1,FeedTank1FwdXferValve2ToFeedTank1,FeedTank1AftXferValve2ToFeedTank1#OutputOnlyLines:FeedTank1ToFeed1TankPump1,FeedTank1ToFeed1TankPump2
-Tank.3 = Name:LeftMid#Title:TT:MENU.FUEL.LEFT_MID#Capacity:9632#UnusableCapacity:0#Position:6.3,-46.4,5.9#Priority:3#OutputOnlyLines:LeftMidTankToLeftMidTankPumpFwd,LeftMidTankToLeftMidTankPumpAft
-Tank.4 = Name:LeftInner#Title:TT:MENU.FUEL.LEFT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:15.8,-24.7,3.2#Priority:4#OutputOnlyLines:LeftInnerTankToLeftInnerTankPumpFwd,LeftInnerTankToLeftInnerTankPumpAft
-Tank.5 = Name:Feed2#Title:TT:MENU.FUEL.FEED_TWO#Capacity:7753.2.#UnusableCapacity:0#Position:26.6,-18.4,1.0#Priority:5#InputOnlyLines:FeedTank2FwdXferValve1_1ToFeedTank2,FeedTank2FwdXferValve1_2ToFeedTank2,FeedTank2FwdXferValve2_1ToFeedTank2,FeedTank2FwdXferValve2_2ToFeedTank2,FeedTank2AftXferValve2ToFeedTank2#OutputOnlyLines:FeedTank2ToFeed2TankPump1,FeedTank2ToFeed2TankPump2
-Tank.6 = Name:Feed3#Title:TT:MENU.FUEL.FEED_THREE#Capacity:7753.2#UnusableCapacity:0#Position:26.6,18.4,1.0#Priority:5#InputOnlyLines:FeedTank3FwdXferValve1_1ToFeedTank3,FeedTank3FwdXferValve1_2ToFeedTank3,FeedTank3FwdXferValve2_1ToFeedTank3,FeedTank3FwdXferValve2_2ToFeedTank3,FeedTank3AftXferValve2ToFeedTank3#OutputOnlyLines:FeedTank3ToFeed3TankPump1,FeedTank3ToFeed3TankPump2
-Tank.7 = Name:RightInner#Title:TT:MENU.FUEL.RIGHT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:15.8,24.7,3.2#Priority:4#OutputOnlyLines:RightInnerTankToRightInnerTankPumpFwd,RightInnerTankToRightInnerTankPumpAft
-Tank.8 = Name:RightMid#Title:TT:MENU.FUEL.RIGHT_MID#Capacity:9632#UnusableCapacity:0#Position:6.3,46.4,5.9#Priority:3#OutputOnlyLines:RightMidTankToRightMidTankPumpFwd,RightMidTankToRightMidTankPumpAft
-Tank.9 = Name:Feed4#Title:TT:MENU.FUEL.FEED_FOUR#Capacity:7299.6#UnusableCapacity:0#Position:-8.2,71,7.3#Priority:5#InputOnlyLines:FeedTank4FwdXferValve1ToFeedTank4,FeedTank4FwdXferValve2ToFeedTank4,FeedTank4AftXferValve2ToFeedTank4#OutputOnlyLines:FeedTank4ToFeed4TankPump1,FeedTank4ToFeed4TankPump2
-Tank.10 = Name:RightOuter#Title:TT:MENU.FUEL.RIGHT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.7,100,8.5#Priority:2#OutputOnlyLines:RightOuterTankToRightOuterTankPump,RightOuterTankToRightOuterEmerXferValve
-Tank.11 = Name:Trim#Title:TT:MENU.FUEL.TRIM#Capacity:6260.3#UnusableCapacity:0#Position:-87.9,0,12.1#Priority:1#OutputOnlyLines:TrimTankToTrimTankPumpLeft,TrimTankToTrimTankPumpRight
+Tank.1 = Name:LeftOuter#Title:TT:MENU.FUEL.LEFT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.0,-100.0,8.5#Priority:2#OutputOnlyLines:LeftOuterTankToLeftOuterTankPump,LeftOuterTankToLeftOuterEmerXferValve
+Tank.2 = Name:Feed1#Title:TT:MENU.FUEL.FEED_ONE#Capacity:7299.6#UnusableCapacity:0#Position:-7.45,-71.0,7.3#Priority:5#InputOnlyLines:FeedTank1FwdXferValve1ToFeedTank1,FeedTank1FwdXferValve2ToFeedTank1,FeedTank1AftXferValve2ToFeedTank1#OutputOnlyLines:FeedTank1ToFeed1TankPump1,FeedTank1ToFeed1TankPump2
+Tank.3 = Name:LeftMid#Title:TT:MENU.FUEL.LEFT_MID#Capacity:9632#UnusableCapacity:0#Position:7.1,-45.9,5.9#Priority:3#OutputOnlyLines:LeftMidTankToLeftMidTankPumpFwd,LeftMidTankToLeftMidTankPumpAft
+Tank.4 = Name:LeftInner#Title:TT:MENU.FUEL.LEFT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:16.5,-24.7,3.2#Priority:4#OutputOnlyLines:LeftInnerTankToLeftInnerTankPumpFwd,LeftInnerTankToLeftInnerTankPumpAft
+Tank.5 = Name:Feed2#Title:TT:MENU.FUEL.FEED_TWO#Capacity:7753.2.#UnusableCapacity:0#Position:27.3,-18.4,1.0#Priority:5#InputOnlyLines:FeedTank2FwdXferValve1_1ToFeedTank2,FeedTank2FwdXferValve1_2ToFeedTank2,FeedTank2FwdXferValve2_1ToFeedTank2,FeedTank2FwdXferValve2_2ToFeedTank2,FeedTank2AftXferValve2ToFeedTank2#OutputOnlyLines:FeedTank2ToFeed2TankPump1,FeedTank2ToFeed2TankPump2
+Tank.6 = Name:Feed3#Title:TT:MENU.FUEL.FEED_THREE#Capacity:7753.2#UnusableCapacity:0#Position:27.3,18.4,1.0#Priority:5#InputOnlyLines:FeedTank3FwdXferValve1_1ToFeedTank3,FeedTank3FwdXferValve1_2ToFeedTank3,FeedTank3FwdXferValve2_1ToFeedTank3,FeedTank3FwdXferValve2_2ToFeedTank3,FeedTank3AftXferValve2ToFeedTank3#OutputOnlyLines:FeedTank3ToFeed3TankPump1,FeedTank3ToFeed3TankPump2
+Tank.7 = Name:RightInner#Title:TT:MENU.FUEL.RIGHT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:16.5,24.7,3.2#Priority:4#OutputOnlyLines:RightInnerTankToRightInnerTankPumpFwd,RightInnerTankToRightInnerTankPumpAft
+Tank.8 = Name:RightMid#Title:TT:MENU.FUEL.RIGHT_MID#Capacity:9632#UnusableCapacity:0#Position:7.1,45.9,5.9#Priority:3#OutputOnlyLines:RightMidTankToRightMidTankPumpFwd,RightMidTankToRightMidTankPumpAft
+Tank.9 = Name:Feed4#Title:TT:MENU.FUEL.FEED_FOUR#Capacity:7299.6#UnusableCapacity:0#Position:-7.45,71,7.3#Priority:5#InputOnlyLines:FeedTank4FwdXferValve1ToFeedTank4,FeedTank4FwdXferValve2ToFeedTank4,FeedTank4AftXferValve2ToFeedTank4#OutputOnlyLines:FeedTank4ToFeed4TankPump1,FeedTank4ToFeed4TankPump2
+Tank.10 = Name:RightOuter#Title:TT:MENU.FUEL.RIGHT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.0,100,8.5#Priority:2#OutputOnlyLines:RightOuterTankToRightOuterTankPump,RightOuterTankToRightOuterEmerXferValve
+Tank.11 = Name:Trim#Title:TT:MENU.FUEL.TRIM#Capacity:6260.3#UnusableCapacity:0#Position:-87.14,0,12.1#Priority:1#OutputOnlyLines:TrimTankToTrimTankPumpLeft,TrimTankToTrimTankPumpRight
 Line.1 = Name:FeedTank1ToFeed1TankPump1#Source:Feed1#Destination:Feed1TankPump1
 Line.2 = Name:FeedTank1ToFeed1TankPump2#Source:Feed1#Destination:Feed1TankPump2
 Line.3 = Name:FeedTank2ToFeed2TankPump1#Source:Feed2#Destination:Feed2TankPump1
