--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -13,6 +13,10 @@
 
 ; 15 Feb 2024 - Activate new spring method and update strut springs
 
+; 19 Jul 2024 - Adjust CG, wheels and fuel tanks to correct model origin to Airbus reference datum offset
+; The position of the nose in the model coord. system is 35.1927m. The Airbus reference datum distance from the nose is 7.33m.
+; So, the conversion from HArm value to model coordinates in m is: model_coord = (35.1927 + 7.33) - harm_value
+
 [VERSION]
 major = 1
 minor = 0
@@ -526,7 +530,7 @@ yaw_moment_delta_rudder = 0.753 ; (control)The change in yaw moment per change i
 yaw_moment_delta_rudder_propwash = 0.753 ; (control)
 yaw_moment_delta_rudder_trim_scalar = 0.753 ; Change in yaw moment due to rudder trim
 compute_aero_center = 0
-aero_center_lift = 10 ; Init to center
+aero_center_lift = 11 ; Init to center
 lift_coef_aoa_table = -3.15:0, 0:0.138, 0.139:1.32, 0.2:1.48, 0.26:1.76, 0.29:1.750, 0.32:1.60, 0.5:1.50, 3.15:0
 lift_coef_ground_effect_mach_table = 0.1171:0.7211,0.1411:0.7111,0.1761:0.6811,0.2171:0.6631,0.3171:0.647135503,0.4171:0.637668047,0.5171:0.63293432,0.6171:0.628200592,0.7171:0.625833728,0.8171:0.623466864,1:1 ; changed from 0.0:1.178, 0.15:1.178, 0.19:1.178, 0.20:1.176, 0.22:1.173, 0.25:1.17, 0.27:1.1675, 0.30:1.164, 0.35:1.159, 1.0:1
 lift_coef_mach_table = 0:1
