feat(a380-wb): adjust root chord to achieve reference MAC length

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -423,7 +423,7 @@ Trigger.38 = Name:CGControlTransferEnd#Threshold:0.405#Condition:CGBelowLimit#Ef
 [AIRPLANE_GEOMETRY]
 wing_area = 9096.0 ; Wing area S (SQUARE FEET)
 wing_span = 261.65 ; Wing span b (FEET)
-wing_root_chord = 57.97 ; Wing root chord croot (FEET)
+wing_root_chord = 58.86 ; Wing root chord croot (FEET), should be 57.97 but increased to match reference MAC length
 wing_camber = 1 ; (DEGREES) (Unkown - estimated value)
 wing_thickness_ratio = 0.05 ; Local thickness is local_chord(x)*wing_thickness_ratio, x = lateral coord
 wing_dihedral = 6.5 ; Dihedral angle Lambda (DEGREES)
