--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -13,6 +13,10 @@
 
 ; 15 Feb 2024 - Activate new spring method and update strut springs
 
+; 19 Jul 2024 - Adjust CG, wheels and fuel tanks to correct model origin to Airbus reference datum offset
+; The position of the nose in the model coord. system is 35.1927m. The Airbus reference datum distance from the nose is 7.33m.
+; So, the conversion from HArm value to model coordinates in m is: model_coord = (35.1927m + 7.33m) - harm_value
+
 [VERSION]
 major = 1
 minor = 0
@@ -24,9 +28,9 @@ minor = 0
 ; Maximum Landing Weight (MLW) 395,000 kg, 870,826 lb
 ; Maximum Zero Fuel Weight (MZFW) 373,000 kg, 822,324 lb (360,000 kg/793,663 lb at fwd CG)
 max_gross_weight = 1124355 ; Max takeoff weight, (LBS)
-empty_weight = 629023; Empty weight, (LBS)
+empty_weight = 661403; Empty weight, (LBS)
 reference_datum_position = 0, 0, 0 ; Position of reference datum relative to FS(0,0,0) (FEET), z, x, y
-empty_weight_CG_position = 5.52, 0, 2.8 ; Position of airplane empty weight CG relative to reference datum (FEET), z, x, y Should give empty weight cg of 36.2%RC
+empty_weight_CG_position = 6.47, 0, 2.8 ; Position of airplane empty weight CG relative to reference datum (FEET), z, x, y Should give empty weight cg of 36.2%RC
 CG_forward_limit = 0.28 ; Gravity center forward limit (longitudinal offset) for longitudinal stability
 CG_aft_limit = 0.44 ; Gravity center after limit (longitudinal offset z) w.r.t reference datum for longitudinal stability (FEET)
 empty_weight_pitch_MOI = 79112140 ; Empty pitch moment of inertia, Jxx (SLUG SQ FEET)
@@ -102,11 +106,13 @@ spring_exponential_fix = 1; Activates MSFS new spring formula
 ;14 The airspeed limit for gears retraction, in kias.
 ;15 Airspeed above which gear is damaged, in kias.
 ;16 The exponential constant for springs
-point.0 = 1, 100.0, 0, -15.15, 800, 0, 2.239, 70, 1.2947673642672, 1.20481927710843, 0.5, 17, 15, 0, 0, 0, 4
-point.1 = 1, -6, -8.5, -15.4, 1200, 1, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
-point.2 = 1, -6, 8.5, -15.4, 1200, 2, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
-point.3 = 1, 3.84, -20.5, -15.25, 1200, 1, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
-point.4 = 1, 3.84, 20.5, -15.25, 1200, 2, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
+
+; WLG, BLG z-positions should be 5.3ft, -5.45ft according to the WBM, but this is slightly adjusted to visually match the model.
+point.0 = 1, 99.15, 0, -15.15, 800, 0, 2.239, 70, 1.2947673642672, 1.20481927710843, 0.5, 17, 15, 0, 0, 0, 4
+point.1 = 1, -5.7, -8.5, -15.4, 1200, 1, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
+point.2 = 1, -5.7, 8.5, -15.4, 1200, 2, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
+point.3 = 1, 5.7, -20.5, -15.18, 1200, 1, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
+point.4 = 1, 5.7, 20.5, -15.18, 1200, 2, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
 point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
@@ -124,17 +130,17 @@ Engine.1 = Name:LeftOuterEngine#Index:1
 Engine.2 = Name:LeftInnerEngine#Index:2
 Engine.3 = Name:RightInnerEngine#Index:3
 Engine.4 = Name:RightOuterEngine#Index:4
-Tank.1 = Name:LeftOuter#Title:TT:MENU.FUEL.LEFT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.7,-100.0,8.5#Priority:2#OutputOnlyLines:LeftOuterTankToLeftOuterTankPump,LeftOuterTankToLeftOuterEmerXferValve
-Tank.2 = Name:Feed1#Title:TT:MENU.FUEL.FEED_ONE#Capacity:7299.6#UnusableCapacity:0#Position:-8.2,-71.0,7.3#Priority:5#InputOnlyLines:FeedTank1FwdXferValve1ToFeedTank1,FeedTank1FwdXferValve2ToFeedTank1,FeedTank1AftXferValve2ToFeedTank1#OutputOnlyLines:FeedTank1ToFeed1TankPump1,FeedTank1ToFeed1TankPump2
-Tank.3 = Name:LeftMid#Title:TT:MENU.FUEL.LEFT_MID#Capacity:9632#UnusableCapacity:0#Position:6.3,-46.4,5.9#Priority:3#OutputOnlyLines:LeftMidTankToLeftMidTankPumpFwd,LeftMidTankToLeftMidTankPumpAft
-Tank.4 = Name:LeftInner#Title:TT:MENU.FUEL.LEFT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:15.8,-24.7,3.2#Priority:4#OutputOnlyLines:LeftInnerTankToLeftInnerTankPumpFwd,LeftInnerTankToLeftInnerTankPumpAft
-Tank.5 = Name:Feed2#Title:TT:MENU.FUEL.FEED_TWO#Capacity:7753.2.#UnusableCapacity:0#Position:26.6,-18.4,1.0#Priority:5#InputOnlyLines:FeedTank2FwdXferValve1_1ToFeedTank2,FeedTank2FwdXferValve1_2ToFeedTank2,FeedTank2FwdXferValve2_1ToFeedTank2,FeedTank2FwdXferValve2_2ToFeedTank2,FeedTank2AftXferValve2ToFeedTank2#OutputOnlyLines:FeedTank2ToFeed2TankPump1,FeedTank2ToFeed2TankPump2
-Tank.6 = Name:Feed3#Title:TT:MENU.FUEL.FEED_THREE#Capacity:7753.2#UnusableCapacity:0#Position:26.6,18.4,1.0#Priority:5#InputOnlyLines:FeedTank3FwdXferValve1_1ToFeedTank3,FeedTank3FwdXferValve1_2ToFeedTank3,FeedTank3FwdXferValve2_1ToFeedTank3,FeedTank3FwdXferValve2_2ToFeedTank3,FeedTank3AftXferValve2ToFeedTank3#OutputOnlyLines:FeedTank3ToFeed3TankPump1,FeedTank3ToFeed3TankPump2
-Tank.7 = Name:RightInner#Title:TT:MENU.FUEL.RIGHT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:15.8,24.7,3.2#Priority:4#OutputOnlyLines:RightInnerTankToRightInnerTankPumpFwd,RightInnerTankToRightInnerTankPumpAft
-Tank.8 = Name:RightMid#Title:TT:MENU.FUEL.RIGHT_MID#Capacity:9632#UnusableCapacity:0#Position:6.3,46.4,5.9#Priority:3#OutputOnlyLines:RightMidTankToRightMidTankPumpFwd,RightMidTankToRightMidTankPumpAft
-Tank.9 = Name:Feed4#Title:TT:MENU.FUEL.FEED_FOUR#Capacity:7299.6#UnusableCapacity:0#Position:-8.2,71,7.3#Priority:5#InputOnlyLines:FeedTank4FwdXferValve1ToFeedTank4,FeedTank4FwdXferValve2ToFeedTank4,FeedTank4AftXferValve2ToFeedTank4#OutputOnlyLines:FeedTank4ToFeed4TankPump1,FeedTank4ToFeed4TankPump2
-Tank.10 = Name:RightOuter#Title:TT:MENU.FUEL.RIGHT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.7,100,8.5#Priority:2#OutputOnlyLines:RightOuterTankToRightOuterTankPump,RightOuterTankToRightOuterEmerXferValve
-Tank.11 = Name:Trim#Title:TT:MENU.FUEL.TRIM#Capacity:6260.3#UnusableCapacity:0#Position:-87.9,0,12.1#Priority:1#OutputOnlyLines:TrimTankToTrimTankPumpLeft,TrimTankToTrimTankPumpRight
+Tank.1 = Name:LeftOuter#Title:TT:MENU.FUEL.LEFT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.0,-100.0,8.5#Priority:2#OutputOnlyLines:LeftOuterTankToLeftOuterTankPump,LeftOuterTankToLeftOuterEmerXferValve
+Tank.2 = Name:Feed1#Title:TT:MENU.FUEL.FEED_ONE#Capacity:7299.6#UnusableCapacity:0#Position:-7.45,-71.0,7.3#Priority:5#InputOnlyLines:FeedTank1FwdXferValve1ToFeedTank1,FeedTank1FwdXferValve2ToFeedTank1,FeedTank1AftXferValve2ToFeedTank1#OutputOnlyLines:FeedTank1ToFeed1TankPump1,FeedTank1ToFeed1TankPump2
+Tank.3 = Name:LeftMid#Title:TT:MENU.FUEL.LEFT_MID#Capacity:9632#UnusableCapacity:0#Position:7.1,-45.9,5.9#Priority:3#OutputOnlyLines:LeftMidTankToLeftMidTankPumpFwd,LeftMidTankToLeftMidTankPumpAft
+Tank.4 = Name:LeftInner#Title:TT:MENU.FUEL.LEFT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:16.5,-24.7,3.2#Priority:4#OutputOnlyLines:LeftInnerTankToLeftInnerTankPumpFwd,LeftInnerTankToLeftInnerTankPumpAft
+Tank.5 = Name:Feed2#Title:TT:MENU.FUEL.FEED_TWO#Capacity:7753.2.#UnusableCapacity:0#Position:27.3,-18.4,1.0#Priority:5#InputOnlyLines:FeedTank2FwdXferValve1_1ToFeedTank2,FeedTank2FwdXferValve1_2ToFeedTank2,FeedTank2FwdXferValve2_1ToFeedTank2,FeedTank2FwdXferValve2_2ToFeedTank2,FeedTank2AftXferValve2ToFeedTank2#OutputOnlyLines:FeedTank2ToFeed2TankPump1,FeedTank2ToFeed2TankPump2
+Tank.6 = Name:Feed3#Title:TT:MENU.FUEL.FEED_THREE#Capacity:7753.2#UnusableCapacity:0#Position:27.3,18.4,1.0#Priority:5#InputOnlyLines:FeedTank3FwdXferValve1_1ToFeedTank3,FeedTank3FwdXferValve1_2ToFeedTank3,FeedTank3FwdXferValve2_1ToFeedTank3,FeedTank3FwdXferValve2_2ToFeedTank3,FeedTank3AftXferValve2ToFeedTank3#OutputOnlyLines:FeedTank3ToFeed3TankPump1,FeedTank3ToFeed3TankPump2
+Tank.7 = Name:RightInner#Title:TT:MENU.FUEL.RIGHT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:16.5,24.7,3.2#Priority:4#OutputOnlyLines:RightInnerTankToRightInnerTankPumpFwd,RightInnerTankToRightInnerTankPumpAft
+Tank.8 = Name:RightMid#Title:TT:MENU.FUEL.RIGHT_MID#Capacity:9632#UnusableCapacity:0#Position:7.1,45.9,5.9#Priority:3#OutputOnlyLines:RightMidTankToRightMidTankPumpFwd,RightMidTankToRightMidTankPumpAft
+Tank.9 = Name:Feed4#Title:TT:MENU.FUEL.FEED_FOUR#Capacity:7299.6#UnusableCapacity:0#Position:-7.45,71,7.3#Priority:5#InputOnlyLines:FeedTank4FwdXferValve1ToFeedTank4,FeedTank4FwdXferValve2ToFeedTank4,FeedTank4AftXferValve2ToFeedTank4#OutputOnlyLines:FeedTank4ToFeed4TankPump1,FeedTank4ToFeed4TankPump2
+Tank.10 = Name:RightOuter#Title:TT:MENU.FUEL.RIGHT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.0,100,8.5#Priority:2#OutputOnlyLines:RightOuterTankToRightOuterTankPump,RightOuterTankToRightOuterEmerXferValve
+Tank.11 = Name:Trim#Title:TT:MENU.FUEL.TRIM#Capacity:6260.3#UnusableCapacity:0#Position:-87.14,0,12.1#Priority:1#OutputOnlyLines:TrimTankToTrimTankPumpLeft,TrimTankToTrimTankPumpRight
 Line.1 = Name:FeedTank1ToFeed1TankPump1#Source:Feed1#Destination:Feed1TankPump1
 Line.2 = Name:FeedTank1ToFeed1TankPump2#Source:Feed1#Destination:Feed1TankPump2
 Line.3 = Name:FeedTank2ToFeed2TankPump1#Source:Feed2#Destination:Feed2TankPump1
@@ -417,7 +423,7 @@ Trigger.38 = Name:CGControlTransferEnd#Threshold:0.405#Condition:CGBelowLimit#Ef
 [AIRPLANE_GEOMETRY]
 wing_area = 9096.0 ; Wing area S (SQUARE FEET)
 wing_span = 261.65 ; Wing span b (FEET)
-wing_root_chord = 57.97 ; Wing root chord croot (FEET)
+wing_root_chord = 58.86 ; Wing root chord croot (FEET), should be 57.97 but increased to match reference MAC length
 wing_camber = 1 ; (DEGREES) (Unkown - estimated value)
 wing_thickness_ratio = 0.05 ; Local thickness is local_chord(x)*wing_thickness_ratio, x = lateral coord
 wing_dihedral = 6.5 ; Dihedral angle Lambda (DEGREES)
@@ -524,7 +530,7 @@ yaw_moment_delta_rudder = 0.753 ; (control)The change in yaw moment per change i
 yaw_moment_delta_rudder_propwash = 0.753 ; (control)
 yaw_moment_delta_rudder_trim_scalar = 0.753 ; Change in yaw moment due to rudder trim
 compute_aero_center = 0
-aero_center_lift = 10 ; Init to center
+aero_center_lift = 11 ; Init to center
 lift_coef_aoa_table = -3.15:0, 0:0.138, 0.139:1.32, 0.2:1.48, 0.26:1.76, 0.29:1.750, 0.32:1.60, 0.5:1.50, 3.15:0
 lift_coef_ground_effect_mach_table = 0.1171:0.7211,0.1411:0.7111,0.1761:0.6811,0.2171:0.6631,0.3171:0.647135503,0.4171:0.637668047,0.5171:0.63293432,0.6171:0.628200592,0.7171:0.625833728,0.8171:0.623466864,1:1 ; changed from 0.0:1.178, 0.15:1.178, 0.19:1.178, 0.20:1.176, 0.22:1.173, 0.25:1.17, 0.27:1.1675, 0.30:1.164, 0.35:1.159, 1.0:1
 lift_coef_mach_table = 0:1
