config changes, delete PseudoFWC

--- a/fbw-a380x/src/systems/instruments/src/EWDv2/config.json
+++ b/fbw-a380x/src/systems/instruments/src/EWDv2/config.json
@@ -1,7 +1,9 @@
 {
   "index": "./instrument.tsx",
-  "isInteractive": false,
-  "extraDeps": [
-    "../MsfsAvionicsCommon"
-  ]
+  "name": "EWDv2",
+  "dimensions": {
+    "width": 768,
+    "height": 1024
+  },
+  "isInteractive": false
 }
