Tip + outter engine collisions

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -115,10 +115,11 @@ point.3 = 1, 5.7, -20.5, -15.18, 1200, 1, 2.356, 0, 1.3146370499424, 1.25, 0.5, 
 point.4 = 1, 5.7, 20.5, -15.18, 1200, 2, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
-point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
-point.8 = 2, 44.07, 0, 2, 720, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 1
-point.9 = 2, -68, 0, 4.1, 100, 0, 0, 0, 0, 0, 0, 0, 0, 7, 0, 0, 1
-point.10 = 2, -75.2, 0, 32.3, 100, 0, 0, 0, 0, 0, 0, 0, 0, 8, 0, 0, 1
+point.7 = 2, 4, 84, -3, 100, 0, 0, 0, 0, 0, 0, 0, 0, 7, 0, 0, 1 ; Engine 4 max upflex position
+point.8 = 2, 4, -84, -3, 100, 0, 0, 0, 0, 0, 0, 0, 0, 7, 0, 0, 1 ; Engine 1 max upflex position
+point.9 = 2,-45,-130,25,100,0,0.0001,0,0.0001,0.0001,0,0,0,5,0,0,1 ; left wing tip max up flex
+point.10 = 2,-45,130,25,100,0,0.0001,0,0.0001,0.0001,0,0,0,6,0,0,1 ; right wing tip max up flex
+
 
 [FUEL]
 fuel_type = 2 ; 1 = OCTANE 100, 2 = JET_A, 3 = OCTANE 80, 4 = AUTO GAS, 5 = JET B
