Use auto mode for standby pumps

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -362,13 +362,13 @@ Valve.57 = Name:JettisonNozzleValveLeft#Circuit:57
 Valve.58 = Name:JettisonNozzleValveRight#Circuit:58
 
 Pump.1 = Name:Feed1TankPump1#Pressure:30#DestinationLine:Pump1Feed1ToJunc1#TankFuelRequired:Feed1#Type:Electric#Index:1
-Pump.2 = Name:Feed1TankPump2#Pressure:30#DestinationLine:Pump2Feed1ToJunc1#TankFuelRequired:Feed1#Type:Electric#Index:2
+Pump.2 = Name:Feed1TankPump2#Pressure:30#DestinationLine:Pump2Feed1ToJunc1#TankFuelRequired:Feed1#Type:Electric#Index:2#AutoCondition:LeftOuterEngine,0
 Pump.3 = Name:Feed2TankPump1#Pressure:30#DestinationLine:Pump1Feed2ToJunc2#TankFuelRequired:Feed2#Type:Electric#Index:3
-Pump.4 = Name:Feed2TankPump2#Pressure:30#DestinationLine:Pump2Feed2ToJunc2#TankFuelRequired:Feed2#Type:Electric#Index:4
+Pump.4 = Name:Feed2TankPump2#Pressure:30#DestinationLine:Pump2Feed2ToJunc2#TankFuelRequired:Feed2#Type:Electric#Index:4#AutoCondition:LeftInnerEngine,0
 Pump.5 = Name:Feed3TankPump1#Pressure:30#DestinationLine:Pump1Feed3ToJunc3#TankFuelRequired:Feed3#Type:Electric#Index:5
-Pump.6 = Name:Feed3TankPump2#Pressure:30#DestinationLine:Pump2Feed3ToJunc3#TankFuelRequired:Feed3#Type:Electric#Index:6
+Pump.6 = Name:Feed3TankPump2#Pressure:30#DestinationLine:Pump2Feed3ToJunc3#TankFuelRequired:Feed3#Type:Electric#Index:6#AutoCondition:RightInnerEngine,0
 Pump.7 = Name:Feed4TankPump1#Pressure:30#DestinationLine:Pump1Feed4ToJunc4#TankFuelRequired:Feed4#Type:Electric#Index:7
-Pump.8 = Name:Feed4TankPump2#Pressure:30#DestinationLine:Pump2Feed4ToJunc4#TankFuelRequired:Feed4#Type:Electric#Index:8
+Pump.8 = Name:Feed4TankPump2#Pressure:30#DestinationLine:Pump2Feed4ToJunc4#TankFuelRequired:Feed4#Type:Electric#Index:8#AutoCondition:RightOuterEngine,0
 Pump.9 = Name:LeftOuterTankPump#Pressure:20#DestinationLine:LeftOuterTankPumpToFwdGalleryJunction#TankFuelRequired:LeftOuter#Type:Electric#Index:9
 Pump.10 = Name:LeftMidTankPumpFwd#Pressure:20#DestinationLine:LeftMidTankPumpFwdToFwdGalleryJunction#TankFuelRequired:LeftMid#Type:Electric#Index:10
 Pump.11 = Name:LeftMidTankPumpAft#Pressure:20#DestinationLine:LeftMidTankPumpAftToAftGalleryJunction#TankFuelRequired:LeftMid#Type:Electric#Index:11
