Revert "Use auto mode for standby pumps"
This reverts commit 2f06bf946aab22396014b1723cd5843539f995d4.

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -362,13 +362,13 @@ Valve.57 = Name:JettisonNozzleValveLeft#Circuit:57
 Valve.58 = Name:JettisonNozzleValveRight#Circuit:58
 
 Pump.1 = Name:Feed1TankPump1#Pressure:30#DestinationLine:Pump1Feed1ToJunc1#TankFuelRequired:Feed1#Type:Electric#Index:1
-Pump.2 = Name:Feed1TankPump2#Pressure:30#DestinationLine:Pump2Feed1ToJunc1#TankFuelRequired:Feed1#Type:Electric#Index:2#AutoCondition:LeftOuterEngine,0
+Pump.2 = Name:Feed1TankPump2#Pressure:30#DestinationLine:Pump2Feed1ToJunc1#TankFuelRequired:Feed1#Type:Electric#Index:2
 Pump.3 = Name:Feed2TankPump1#Pressure:30#DestinationLine:Pump1Feed2ToJunc2#TankFuelRequired:Feed2#Type:Electric#Index:3
-Pump.4 = Name:Feed2TankPump2#Pressure:30#DestinationLine:Pump2Feed2ToJunc2#TankFuelRequired:Feed2#Type:Electric#Index:4#AutoCondition:LeftInnerEngine,0
+Pump.4 = Name:Feed2TankPump2#Pressure:30#DestinationLine:Pump2Feed2ToJunc2#TankFuelRequired:Feed2#Type:Electric#Index:4
 Pump.5 = Name:Feed3TankPump1#Pressure:30#DestinationLine:Pump1Feed3ToJunc3#TankFuelRequired:Feed3#Type:Electric#Index:5
-Pump.6 = Name:Feed3TankPump2#Pressure:30#DestinationLine:Pump2Feed3ToJunc3#TankFuelRequired:Feed3#Type:Electric#Index:6#AutoCondition:RightInnerEngine,0
+Pump.6 = Name:Feed3TankPump2#Pressure:30#DestinationLine:Pump2Feed3ToJunc3#TankFuelRequired:Feed3#Type:Electric#Index:6
 Pump.7 = Name:Feed4TankPump1#Pressure:30#DestinationLine:Pump1Feed4ToJunc4#TankFuelRequired:Feed4#Type:Electric#Index:7
-Pump.8 = Name:Feed4TankPump2#Pressure:30#DestinationLine:Pump2Feed4ToJunc4#TankFuelRequired:Feed4#Type:Electric#Index:8#AutoCondition:RightOuterEngine,0
+Pump.8 = Name:Feed4TankPump2#Pressure:30#DestinationLine:Pump2Feed4ToJunc4#TankFuelRequired:Feed4#Type:Electric#Index:8
 Pump.9 = Name:LeftOuterTankPump#Pressure:20#DestinationLine:LeftOuterTankPumpToFwdGalleryJunction#TankFuelRequired:LeftOuter#Type:Electric#Index:9
 Pump.10 = Name:LeftMidTankPumpFwd#Pressure:20#DestinationLine:LeftMidTankPumpFwdToFwdGalleryJunction#TankFuelRequired:LeftMid#Type:Electric#Index:10
 Pump.11 = Name:LeftMidTankPumpAft#Pressure:20#DestinationLine:LeftMidTankPumpAftToAftGalleryJunction#TankFuelRequired:LeftMid#Type:Electric#Index:11
@@ -388,7 +388,7 @@ Trigger.3 = Name:InnerandMidTanksXferFeed3Start#Target:Feed3#Threshold:6857#Cond
 Trigger.4 = Name:InnerandMidTanksXferFeed4Start#Target:Feed4#Threshold:6436#Condition:TankQuantityBelow#EffectTrue:OpenValve.FeedTank4FwdTransferValve1,OpenValve.FeedTank4FwdTransferValve2,StartPump.LeftInnerTankPumpFwd,StartPump.RightInnerTankPumpFwd,SetJunction.FwdGalleryJunction.2
 Trigger.5 = Name:Equalize1and4#Target:Feed1,Feed4#Threshold:2#Condition:TankAbsImbalanceBelow#EffectTrue:OpenValve.FeedTank1FwdTransferValve2,OpenValve.FeedTank4FwdTransferValve2,OpenValve.FeedTank1AftTransferValve1,OpenValve.FeedTank4AftTransferValve1
 Trigger.6 = Name:Equalize2and3#Target:Feed2,Feed3#Threshold:2#Condition:TankAbsImbalanceBelow#EffectTrue:OpenValve.FeedTank2FwdTransferValve2_1,OpenValve.FeedTank3FwdTransferValve2_1,OpenValve.FeedTank2FwdTransferValve2_2,OpenValve.FeedTank3FwdTransferValve2_2,OpenValve.FeedTank2AftTransferValve1,OpenValve.FeedTank3AftTransferValve1
-Trigger.7 = Name:InnerandMidTanksXferFeed1and4End#Target:Feed1#Threshold:6765#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank1FwdTransferValve1,CloseValve.FeedTank1FwdTransferValve2,CloseValve.FeedTank4FwdTransferValve1,CloseValve.FeedTank4FwdTransferValve2,SetJunction.FwdGalleryJunction.1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction1.1
+Trigger.7 = Name:Innerand MidTanksXferFeed1and4End#Target:Feed1#Threshold:6765#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank1FwdTransferValve1,CloseValve.FeedTank1FwdTransferValve2,CloseValve.FeedTank4FwdTransferValve1,CloseValve.FeedTank4FwdTransferValve2,SetJunction.FwdGalleryJunction.1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction1.1
 Trigger.8 = Name:InnerandMidTanksXferFeed2and3End#Target:Feed2#Threshold:7186#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank2FwdTransferValve1_1,CloseValve.FeedTank2FwdTransferValve2_1,CloseValve.FeedTank2FwdTransferValve2_2,CloseValve.FeedTank3FwdTransferValve1_1,CloseValve.FeedTank3FwdTransferValve2_1,CloseValve.FeedTank3FwdTransferValve2_2
 Trigger.9 = Name:InnerandMidTanksXferFeed2and3EndRedundant#Target:Feed3#Threshold:7187#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank2FwdTransferValve1_1,CloseValve.FeedTank2FwdTransferValve2_1,CloseValve.FeedTank2FwdTransferValve2_2,CloseValve.FeedTank3FwdTransferValve1_1,CloseValve.FeedTank3FwdTransferValve2_1,CloseValve.FeedTank3FwdTransferValve2_2
 Trigger.10 = Name:InnerandMidTanksXferFeed1and4EndRedundant#Target:Feed4#Threshold:6766#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank1FwdTransferValve1,CloseValve.FeedTank1FwdTransferValve2,CloseValve.FeedTank4FwdTransferValve1,CloseValve.FeedTank4FwdTransferValve2,SetJunction.FwdGalleryJunction.1,SetJunction.FeedTanks2_3Junction1.1,SetJunction.FeedTanks2_3Junction1.1
