feat(a380x/oans): OANS integration for A380X (#8564)
* ignore flight phase for BTV display; show BTV message at top of ND

* merge fms-v2 into feat-a380x-oans

* implement Navigraph-less BTV fallback

* feat: fms-v2 msfs sync (#8508)

* add intial sync with all todos and hacks

* serialize dest and origin airports

* fix: guard origin and destination airport in serialization

* fix: waypoint insertion, add extra module for sync

* remove unncecessary change

* use more granular sync events

* some cleanup

* feat: sync flight plan from game

* fix some errors

* more log

* fix: export FlightPlanRpcServer

* fix: mapping

* fix: delay init until ingame

* use native fms2 sync

* fix: missing airport and runway in sync

* Revert "fix: missing airport and runway in sync"

This reverts commit 0d87e5acb77fe278dc5ae03f3dc6fa0d3dd5fc61.

* Revert "use native fms2 sync"

This reverts commit b9f2f1f94cc9cb3dc50cf62fb1b73ae859d2aadd.

* fix: sync confusion

* small improvement

* enable basic load from sim

* fix: rpcclient creation

* only use rpc client for initial load

* fix: datastore subscription

* fix: enroute waypoint insertion

* fix: approach mapping, off by one error and runway selection

* remove flightPlanTest

* fix: typing errors

* fix: destination runways without secondary designator

* fix: lint

* fix(sync): use sensible defaults if mapping fails

* fix: init issue after fixing other init issue

* Fix wrong FD leg ident

* Improve arrival and departure pages

* Handle explicit NO SID, NO STAR, etc. selection

* Refactor MPR selection

* Fix missing disco after leg deletion in alternate

* Remove arrival procedures after changing alternate

* Dump entire alternate plan when changing altn dest

* feat: load MSFS flightplan in "SAVE" mode too

* Remove commented code

* Remove FacilityCache console logging

* Highlight entire row for selected approach

* Allow rep

--- a/fbw-a380x/src/systems/tsconfig.json
+++ b/fbw-a380x/src/systems/tsconfig.json
@@ -17,6 +17,7 @@
         "@atsu/*": ["./atsu/src/*"],
         "@fmgc/*": ["../../../fbw-a32nx/src/systems/fmgc/src/*"],
         "@flybywiresim/failures": ["failures"],
+        "@simbridge/*": ["../../../fbw-a32nx/src/systems/simbridge-client/src/*"],
         "@tcas/*": ["./tcas/src/*"],
         "@typings/*": ["../typings"],
         "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"],
