--- a/fbw-a380x/src/systems/extras-host/tsconfig.json
+++ b/fbw-a380x/src/systems/extras-host/tsconfig.json
@@ -11,7 +11,7 @@
       "@instruments/common/*": ["./instruments/src/Common/*"],
       "@localization/*": ["../localization/*"],
       "@sentry/*": ["./sentry-client/src/*"],
-      "@simbridge/*": ["./simbridge-client/src/*"],
+      "@simbridge/*": ["../../../fbw-a32nx/src/systems/simbridge-client/src/*"],
       "@shared/*": ["./shared/src/*"],
       "@tcas/*": ["./tcas/src/*"],
       "@typings/*": ["../../../fbw-common/src/typings/*"],
