--- a/fbw-a380x/src/wasm/systems/a380_systems/Cargo.toml
+++ b/fbw-a380x/src/wasm/systems/a380_systems/Cargo.toml
@@ -10,7 +10,10 @@ nalgebra = "0.25.0"
 ntest = "0.7.2"
 fxhash = "0.2.1"
 rand = "0.8.0"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_with = { version = "3.9.0", features = ["std"] }
 systems = { path = "../../../../../fbw-common/src/wasm/systems/systems" }
+toml = "0.8.19"
 
 [dev-dependencies]
 rstest = "0.10.0"
