--- a/fbw-common/src/wasm/cpp-msfs-framework/CMakeLists.txt
+++ b/fbw-common/src/wasm/cpp-msfs-framework/CMakeLists.txt
@@ -6,7 +6,7 @@ set(SOURCE_FILES
     MsfsHandler/DataTypes/ClientEvent.cpp
     MsfsHandler/DataTypes/NamedVariable.cpp
     MsfsHandler/MsfsHandler.cpp
-    )
+)
 set(INCLUDE_FILES
     MsfsHandler/DataManager.h
     MsfsHandler/DataTypes/AircraftVariable.h
@@ -23,6 +23,7 @@ set(INCLUDE_FILES
     MsfsHandler/MsfsHandler.h
     MsfsHandler/SimconnectExceptionStrings.h
     MsfsHandler/SimUnits.h
+    lib/arinc429.hpp
     lib/Callback.h
     lib/IDGenerator.h
     lib/fingerprint.hpp
@@ -37,7 +38,7 @@ set(INCLUDE_FILES
     lib/string_utils.hpp
     lib/quantity.hpp)
 
-# create the targets for all aircrafts
+# create the targets for all packages
 add_library(cpp-msfs-framework-a32nx OBJECT ${SOURCE_FILES} ${INCLUDE_FILES})
 target_compile_definitions(cpp-msfs-framework-a32nx PUBLIC A32NX)
 
