--- a/package.json
+++ b/package.json
@@ -106,6 +106,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.17.3",
+    "eslint-plugin-tsdoc": "^0.3.0",
+    "eslint-plugin-jsdoc": "^50.2.3",
     "fs-extra": "^10.1.0",
     "jest": "^29.7.0",
     "jsdom": "^16.4.0",
