--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "a32nx",
   "version": "0.12.0",
-  "edition": "development",
+  "edition": "stable",
   "imports": {
     "#build-utils": "./build-utils.js"
   },
@@ -75,7 +75,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "~7.12.7",
-    "@flybywiresim/fragmenter": "^0.7.0",
+    "@flybywiresim/fragmenter": "^0.8.0",
     "@flybywiresim/igniter": "^1.2.3",
     "@flybywiresim/rnp": "^2.1.0",
     "@navigraph/pkce": "^1.0.0",
