--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -435,11 +435,11 @@ wing_winglets_flag = 0 ; Has winglets true/false (MSFS doesn't use this paramete
 wing_sweep = 37 ; Wing sweep (DEGREES)
 ;wing_pos_apex_lon = 0 ; Longitudinal (z) position of wing apex w.r.t reference datum (FEET) (not used)
 wing_pos_apex_vert = -2 ; Vertical (y) position of wing apex w.r.t reference datum (FEET) (estimated from mesh drawing)
-htail_area = 2300 ; Horizontal tail area (SQUARE FEET) original 1603
+htail_area = 2000; Horizontal tail area (SQUARE FEET) original 1603
 htail_span = 99.64 ; Horizontal tail span (FEET)
-htail_pos_lon = -105 ; Longitudinal (z) position of horizontal tail  w.r.t reference datum (FEET) -76.6
+htail_pos_lon = -100 ; Longitudinal (z) position of horizontal tail  w.r.t reference datum (FEET) -76.6
 htail_pos_vert = 14.8 ; Vertical (y) position of horizontal tail  w.r.t reference datum (FEET) 13.8 11.35
-htail_incidence = 0 ; Horizontal tail incidence (DEGREES)
+htail_incidence = -1 ; Horizontal tail incidence (DEGREES)
 htail_sweep = 38 ; Horizontal tail sweep angle (DEGREES)
 htail_thickness_ratio = 0.02 ; Local thickness is local_chord(x)*htail_thickness_ratio, x = lateral coord
 vtail_area = 2800.4 ; Vertical tail area (SQUARE FEET)
@@ -618,6 +618,14 @@ ground_crosswind_effect_zero_speed = -1000
 ground_crosswind_effect_max_speed = -1000
 ground_high_speed_steeringwheel_static_friction_scalar = 1
 ground_high_speed_otherwheel_static_friction_scalar = 1
+ground_new_contact_model_gear_flex = 0.0
+ground_new_contact_model_gear_flex_damping = 0.0
+ground_new_contact_model_rolling_stickyness = 0.5
+ground_new_contact_model_up_to_speed_lateral = 10000
+ground_new_contact_model_up_to_speed_lateral_steering = 10000
+ground_new_contact_model_up_to_speed_longitudinal = 10000
+enable_high_accuracy_integration = 1
+
 
 [REFERENCE SPEEDS]
 full_flaps_stall_speed = 115 ; Knots True (KTAS)
