--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -717,12 +717,12 @@ lift_scalar = 0 ; Scalar coefficient to ponderate global flap lift coef (non dim
 drag_scalar = 0 ; Scalar coefficient to ponderate global flap drag coef (non dimensioned)
 pitch_scalar = 0 ; Scalar coefficient to ponderate global flap pitch coef (non dimensioned)
 max_on_ground_position = 5 ; Dynamically set in-tool to last flap-position index by defaut when -1 is found.
-flaps-position.0 =  0.00,  -1, 0.00, 0.00 ; CONF 0
-flaps-position.1 =  0.01,  -1, 1.00, 1.00 ; CONF 1
-flaps-position.2 = 8.00, 222, 1.00, 1.00 ; CONF 1+F
-flaps-position.3 = 17.00, 220, 1.00, 1.00 ; CONF 2
-flaps-position.4 = 26.00, 196, 1.00, 1.00 ; CONF 3
-flaps-position.5 = 32.00, 182, 1.00, 1.00 ; CONF FULL
+flaps-position.0 =  0.00,  -1, 0.00, 0.00 , 1.0, 0, 0 ; CONF 0
+flaps-position.1 =  0.01,  -1, 1.00, 1.00, 1.0, 0, -0.2  ; CONF 1
+flaps-position.2 = 8.00, 222, 1.00, 1.00 , 1.0, 0, -0.5 ; CONF 1+F
+flaps-position.3 = 17.00, 220, 1.00, 1.00 , 1.0, 0, -0.8 ; CONF 2
+flaps-position.4 = 26.00, 196, 1.00, 1.00 , 1.0, 0, -0.9 ; CONF 3
+flaps-position.5 = 32.00, 182, 1.00, 1.00 , 1.0, 0, -1 ; CONF FULL
 
 [FLAPS.1]
 type = 1 ; Flap type 0 = None, 1 = trailing edge, 2 = leading edge
@@ -737,12 +737,14 @@ lift_scalar = 1 ; Scalar coefficient to ponderate global flap lift coef (non dim
 drag_scalar = 1 ; Scalar coefficient to ponderate global flap drag coef (non dimensioned)
 pitch_scalar = 1 ; Scalar coefficient to ponderate global flap pitch coef (non dimensioned)
 max_on_ground_position = 5 ; Dynamically set in-tool to last flap-position index by defaut when -1 is found.
-flaps-position.0 =  0.00,  -1, 0, 0.0 ; CONF 0
+;flaps-position.x=[angle_degrees],[speedlimit_knots],[dragscalar_scalar],[liftscalar_scalar],[areascalar_scalar],[addcamber_radians],[longoffset_feet]
 flaps-position.1 =  5.0,  -1, 1.00, 1.00 ; CONF 1
-flaps-position.2 = 10.00, 222, 0.70, 1.30 ; CONF 1+F
-flaps-position.3 = 15.00, 220, 1.30, 1.25 ; CONF 2
-flaps-position.4 = 20.00, 196, 1.50, 1.50 ; CONF 3
-flaps-position.5 = 32.00, 182, 1.00, 1.00 ; CONF FULL
+flaps-position.0 =  0.00,  -1, 0, 0.0, 1.0, 0, 0  ; CONF 0
+flaps-position.1 =  5.0,  -1, 1.00, 1.00 , 1.0, 0, -0.2 ; CONF 1
+flaps-position.2 = 10.00, 222, 0.70, 1.30, 1.0, 0, -0.5 ; CONF 1+F
+flaps-position.3 = 15.00, 220, 1.30, 1.25, 1.0, 0, -0.8  ; CONF 2
+flaps-position.4 = 20.00, 196, 1.50, 1.50, 1.0, 0, -0.9 ; CONF 3
+flaps-position.5 = 32.00, 182, 1.00, 1.00, 1.0, 0, -1  ; CONF FULL
 
 [FLAPS.2]
 type = 2 ; Flap type 0 = None, 1 = trailing edge, 2 = leading edge
