update ground handling

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -111,10 +111,10 @@ spring_exponential_fix = 1; Activates MSFS new spring formula
 
 ; WLG, BLG z-positions should be 5.3ft, -5.45ft according to the WBM, but this is slightly adjusted to visually match the model.
 point.0 = 1, 99.15, 0, -15.15, 800, 0, 2.239, 70, 1.2947673642672, 1.20481927710843, 0.5, 17, 15, 0, 0, 0, 4
-point.1 = 1, -5.7, -8.5, -15.4, 1200, 1, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
-point.2 = 1, -5.7, 8.5, -15.4, 1200, 2, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
-point.3 = 1, 5.7, -20.5, -15.18, 1200, 1, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
-point.4 = 1, 5.7, 20.5, -15.18, 1200, 2, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
+point.1 = 1, -5.7, -11.5, -15.4, 1200, 1, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
+point.2 = 1, -5.7, 11.5, -15.4, 1200, 2, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
+point.3 = 1, 5.7, -23.0, -15.18, 1200, 1, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
+point.4 = 1, 5.7, 23.0, -15.18, 1200, 2, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
 point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
@@ -618,6 +618,13 @@ ground_crosswind_effect_zero_speed = -1000
 ground_crosswind_effect_max_speed = -1000
 ground_high_speed_steeringwheel_static_friction_scalar = 1
 ground_high_speed_otherwheel_static_friction_scalar = 1
+ground_new_contact_model_gear_flex = 0.0
+ground_new_contact_model_gear_flex_damping = 0.0
+ground_new_contact_model_rolling_stickyness = 0.4
+ground_new_contact_model_up_to_speed_lateral = 10000
+ground_new_contact_model_up_to_speed_lateral_steering = 10000
+ground_new_contact_model_up_to_speed_longitudinal = 10000
+enable_high_accuracy_integration = 1
 
 [REFERENCE SPEEDS]
 full_flaps_stall_speed = 115 ; Knots True (KTAS)
