--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/flypad-misc.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/flypad-misc.json5
@@ -13,10 +13,12 @@
 //
 // Please follow the instructions in the documentation to create a new configuration file!
 // =======================================================================================
-// Last updated: 2 April 2024
+// 0.1 - Init
+// 0.2 - Added "_realism" object
+// Last updated: 5 October 2024
 {
     "configMajorVersion": 0,
-    "configMinorVersion": 1,
+    "configMinorVersion": 2,
     "_throttle": {
         "numberOfAircraftThrottles": 2,
         "axisOptions": [
@@ -27,6 +29,12 @@
             [[1, 2]],   // 1
             [[1], [2]], // 2
         ]
+    },
+    "_realism": {
+        "mcduKeyboard": true,
+        "pauseOnTod": true,
+        "pilotAvatars": true,
+        "wingFlex": false
     },
     "_pushback": {
         "turnIndicatorTuningDefault": 1.35, // determined by testing
