--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/GSX.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/GSX.cfg
@@ -10,14 +10,14 @@ pushbackdummyevent = 0
 pushbackcheckengines = 0
 ignoreicing = 0
 iscargo = 0
-trafficcones = 0
+trafficcones = 1
 preferredexit =  0
-wingrootpos = 2.36 -1.89 0.85
-wingtippos = 15.70 -7.41 1.84
+wingrootpos = 7.23 0.49 3.33
+wingtippos = 24.45 -6.42 3.33
 fuelpos = -18.82 3.00 1.78
-waterpos = 1.28 -18.07 0.52
-lavatorypos = 0.59 -18.07 0.12
-gpupos = 3.29 11.06 -1.56
+waterpos = 0.40 -8.69 -1.94
+lavatorypos = -0.28 -18.20 -0.63
+gpupos = 0.54 29.18 -1.48
 bypasspinpos = 0.00 30.46 -0.09
 engine1pos = -25.78 3.39 2.34
 engine2pos = 14.91 11.27 -1.08
@@ -25,34 +25,45 @@ engine3pos = 25.79 3.31 -0.28
 engine4pos = 25.79 3.31 2.43
 engine5pos = 0.00 0.00 0.00
 engine6pos = 0.00 0.00 0.00
-paxseatspos =  []
 
 [exit1]
-pos = -2.59 28.86 0.94 4.00
+pos = -2.96 28.89 0.69 7.00
 code = 1
 name = Passenger Door
 ceiling = 1.8
 embeddedStair = 0
 
 [exit2]
-remove = 1
+pos = -3.50 18.61 1.12 0.00
+code = 2
+name = Exit 2
+ceiling = 1.8
+embeddedStair = 0
 
 [exit3]
-pos = -1.60 -16.15 0.97 -12.00
+pos = -3.50 14.22 3.60 0.00
 code = 3
-name = Passenger Aft Door
+name = Exit 3
 ceiling = 1.8
 embeddedStair = 0
 
 [exit4]
-remove = 1
+pos = -3.11 -18.64 0.96 -6.00
+code = 4
+name = Passenger Aft Door
+ceiling = 1.8
+embeddedStair = 0
 
 [service1]
-remove = 1
+pos = 3.02 28.84 0.91 -8.00
+code = 5
+name = Exit 5
+ceiling = 1.8
+embeddedStair = 0
 
 [service2]
-pos = 1.80 -16.15 1.03 12.00
-code = 4
+pos = 3.56 18.69 0.92 0.00
+code = 8
 name = Service Door AFT
 ceiling = 1.8
 embeddedStair = 0
@@ -63,15 +74,20 @@ code = 6
 name = Cargo Door
 ceiling = 1.8
 embeddedStair = 0
-uldcode = BELT
+uldcode = PMC,PALLET5
 
 [cargo2]
-pos = 1.42 -13.14 -1.06 -0.39
-code = 6
+pos = 1.53 -13.14 -1.06 2.61
+code = 7
 name = Cargo Door
 ceiling = 1.8
 embeddedStair = 0
-uldcode = BELT
+uldcode = AKE
 
 [cargomain]
-remove = 1
+pos = 2.15 -16.01 -0.73 13.00
+code = 9
+name = Exit 1
+ceiling = 1.8
+embeddedStair = 0
+uldcode = BELT
