--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/systems.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/systems.cfg
@@ -497,7 +497,7 @@ circuit.122 = Type:CIRCUIT_FUEL_VALVE:41#Connections:bus.1#Power:3, 5, 20.0#Name
 circuit.123 = Type:CIRCUIT_FUEL_VALVE:42#Connections:bus.1#Power:3, 5, 20.0#Name:Right_Outer_Aft_Xfer_Valve2 ; Fuel Valves 5W
 circuit.124 = Type:CIRCUIT_FUEL_VALVE:43#Connections:bus.1#Power:3, 5, 20.0#Name:Trim_Inlet_Valve 1; Fuel Valves 5W
 circuit.125 = Type:CIRCUIT_FUEL_VALVE:44#Connections:bus.1#Power:3, 5, 20.0#Name:Trim_Line_Iso_Valve_Fwd ; Fuel Valves 5W
-circuit.126 = Type:CIRCUIT_FUEL_VALVE:45#Connections:bus.1#Power:3, 5, 20.0#Name:Trim_Line_Iso_Valve_Aft_1 ; Fuel Valves 5W
+circuit.126 = Type:CIRCUIT_FUEL_VALVE:45#Connections:bus.1#Power:3, 5, 20.0#Name:Trim_Line_Iso_Valve_Aft_1 ; Fuel Valves 5W  ; re-purposed
 circuit.127 = Type:CIRCUIT_FUEL_VALVE:46#Connections:bus.1#Power:3, 5, 20.0#Name:Crossfeed_Valve_1 ; Fuel Valves 5W
 circuit.128 = Type:CIRCUIT_FUEL_VALVE:47#Connections:bus.1#Power:3, 5, 20.0#Name:Crossfeed_Valve_2 ; Fuel Valves 5W
 circuit.129 = Type:CIRCUIT_FUEL_VALVE:48#Connections:bus.1#Power:3, 5, 20.0#Name:Crossfeed_Valve_3 ; Fuel Valves 5W
@@ -515,8 +515,8 @@ circuit.140 = Type:CIRCUIT_XML:16#Connections:bus.12#Power:3, 5, 20.0#Name:HotBa
 circuit.141 = Type:CIRCUIT_XML:17#Connections:bus.8#Power:3, 5, 20.0#Name:WipersLeft ; Wipers 5W
 circuit.142 = Type:CIRCUIT_AVIONICS#Connections:bus.10#Power:0.5,1,20.0#Name:Avionics ; Avionics
 circuit.143 = Type:CIRCUIT_XML:18#Connections:bus.9#Power:3, 5, 20.0#Name:WipersRIght ; Wipers 5W
-circuit.144 = Type:CIRCUIT_FUEL_VALVE:59#Connections:bus.1#Power:3, 5, 20.0#Name:Trim_Line_Iso_Valve_Aft_2 ; Fuel Valves 5W
-circuit.145 = Type:CIRCUIT_FUEL_VALVE:60#Connections:bus.1#Power:3, 5, 20.0#Name:Trim_Inlet_Valve 2; Fuel Valves 5W
+circuit.144 = Type:CIRCUIT_FUEL_VALVE:59#Connections:bus.1#Power:3, 5, 20.0#Name:Trim_Line_Iso_Valve_Aft_2 ; Fuel Valves 5W    ; new
+circuit.145 = Type:CIRCUIT_FUEL_VALVE:60#Connections:bus.1#Power:3, 5, 20.0#Name:Trim_Inlet_Valve 2; Fuel Valves 5W  ; new
 
 ;; Standby Instrument ISIS (panel.xml)
 ;circuit.145 = Type:CIRCUIT_SAI:1#Connections:bus.1#Power:25, 30, 20.0#Name:SAI_1 ; Standby Indicator
