--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/systems.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/systems.cfg
@@ -517,29 +517,29 @@ circuit.142 = Type:CIRCUIT_AVIONICS#Connections:bus.10#Power:0.5,1,20.0#Name:Avi
 circuit.143 = Type:CIRCUIT_XML:18#Connections:bus.9#Power:3, 5, 20.0#Name:WipersRIght ; Wipers 5W
 circuit.144 = Type:CIRCUIT_FUEL_VALVE:59#Connections:bus.1#Power:3, 5, 20.0#Name:Trim_Line_Iso_Valve_Aft_2 ; Fuel Valves 5W    ; new
 circuit.145 = Type:CIRCUIT_FUEL_VALVE:60#Connections:bus.1#Power:3, 5, 20.0#Name:Trim_Inlet_Valve 2; Fuel Valves 5W  ; new
-
+; Below circuits are not being used. Would need to be re-indexed
 ;; Standby Instrument ISIS (panel.xml)
-;circuit.145 = Type:CIRCUIT_SAI:1#Connections:bus.1#Power:25, 30, 20.0#Name:SAI_1 ; Standby Indicator
+;circuit.125 = Type:CIRCUIT_SAI:1#Connections:bus.1#Power:25, 30, 20.0#Name:SAI_1 ; Standby Indicator
 ;
-;circuit.146 = Type:CIRCUIT_XML:18#Connections:bus.9#Power:3, 5, 20.0#Name:WipersRight ; Wipers 5W
+;circuit.126 = Type:CIRCUIT_XML:18#Connections:bus.9#Power:3, 5, 20.0#Name:WipersRight ; Wipers 5W
 ;
 ;; Capt. and F/O reading lights: DC 1
-;circuit.147 = Type:CIRCUIT_LIGHT_PANEL:5#Connections:bus.8#Power:6, 8, 20.0#Name:Reading_Lights ; Reading lights
+;circuit.127 = Type:CIRCUIT_LIGHT_PANEL:5#Connections:bus.8#Power:6, 8, 20.0#Name:Reading_Lights ; Reading lights
 ;
 ;; F/O glareshield lights: DC 1
-;circuit.148 = Type:CIRCUIT_LIGHT_GLARESHIELD:4#Connections:bus.8#Power:3, 5, 20.0#Name:FOGlareshieldLights ; FOGlareshieldLights 5W
+;circuit.128 = Type:CIRCUIT_LIGHT_GLARESHIELD:4#Connections:bus.8#Power:3, 5, 20.0#Name:FOGlareshieldLights ; FOGlareshieldLights 5W
 ;
 ;; F/O console/floor light: DC 2
-;circuit.149 = Type:CIRCUIT_LIGHT_PANEL:6#Connections:bus.9#Power:2, 5, 20.0#Name:Panel_Light_3 ; panel light 5W
+;circuit.129 = Type:CIRCUIT_LIGHT_PANEL:6#Connections:bus.9#Power:2, 5, 20.0#Name:Panel_Light_3 ; panel light 5W
 ;
 ;; EMISSIVE AMBIENT CIRCUITS
-;circuit.150 = Type:CIRCUIT_LIGHT_GLARESHIELD:5#Connections:bus.2#Power:2,5,20.0#Name:Emissive_FCU    ; AC1 FCU EMISSIVE AMB 5W
-;circuit.151 = Type:CIRCUIT_LIGHT_PANEL:7#Connections:bus.2#Power:2,5,20.0#Name:Emissive_MAIN_PNL     ; AC1 MAIN PNL EMISSIVE AMB 5W
-;circuit.152 = Type:CIRCUIT_LIGHT_PANEL:8#Connections:bus.2#Power:2,5,20.0#Name:Emissive_OVHD         ; AC1 OVHD EMISSIVE AMB 5W
-;circuit.153 = Type:CIRCUIT_LIGHT_PANEL:9#Connections:bus.2#Power:2,5,20.0#Name:Emissive_PED          ; AC1 PED EMISSIVE AMB 5W
+;circuit.130 = Type:CIRCUIT_LIGHT_GLARESHIELD:5#Connections:bus.2#Power:2,5,20.0#Name:Emissive_FCU    ; AC1 FCU EMISSIVE AMB 5W
+;circuit.131 = Type:CIRCUIT_LIGHT_PANEL:7#Connections:bus.2#Power:2,5,20.0#Name:Emissive_MAIN_PNL     ; AC1 MAIN PNL EMISSIVE AMB 5W
+;circuit.132 = Type:CIRCUIT_LIGHT_PANEL:8#Connections:bus.2#Power:2,5,20.0#Name:Emissive_OVHD         ; AC1 OVHD EMISSIVE AMB 5W
+;circuit.133 = Type:CIRCUIT_LIGHT_PANEL:9#Connections:bus.2#Power:2,5,20.0#Name:Emissive_PED          ; AC1 PED EMISSIVE AMB 5W
 ;
 ;; PARK BRK EXT LT
-;circuit.154 = Type:CIRCUIT_LIGHT_RECOGNITION:1#Connections:bus.17#Power:1,2,5#Name:PARK_BRK_LT       ; DC GND FLT SVC PARK BRK LT
+;circuit.134 = Type:CIRCUIT_LIGHT_RECOGNITION:1#Connections:bus.17#Power:1,2,5#Name:PARK_BRK_LT       ; DC GND FLT SVC PARK BRK LT
 
 apu_pct_rpm_per_second = 1000 ; Set to 1000, meaning the APU starts and stops in 1 millisecond.
                               ; The WASM module manages the APU, but until integration of the whole pneumatic and electrical system is finished
