--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -161,7 +161,7 @@ Tank.7 = Name:RightInner#Title:FUEL RIGHT INNER#Capacity:12189.4#UnusableCapacit
 Tank.8 = Name:RightMid#Title:FUEL RIGHT MID#Capacity:9632#UnusableCapacity:0#Position:7.1,45.9,5.9#Priority:3#InputOnlylines:RightMidFwdXferValveToRightMidTank,RightMidAftXferValve2ToRightMidTank#OutputOnlyLines:RightMidTankToRightMidTankPumpFwd,RightMidTankToRightMidTankPumpAft
 Tank.9 = Name:Feed4#Title:FUEL FEED FOUR#Capacity:7299.6#UnusableCapacity:0#Position:-7.45,71,7.3#Priority:5#InputOnlyLines:FeedTank4FwdXferValve1ToFeedTank4,FeedTank4FwdXferValve2ToFeedTank4,FeedTank4AftXferValve2ToFeedTank4#OutputOnlyLines:FeedTank4ToFeed4TankPump1,FeedTank4ToFeed4TankPump2
 Tank.10 = Name:RightOuter#Title:FUEL RIGHT OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.0,100,8.5#Priority:2#InputOnlyLines:RightOuterFwdXferValveToRightOuterTank,RightOuterAftXferValve2ToRightOuterTank#OutputOnlyLines:RightOuterTankToRightOuterTankPump,RightOuterTankToRightOuterEmerXferValve
-Tank.11 = Name:Trim#Title:FUEL TRIM#Capacity:6260.3#UnusableCapacity:0#Position:-87.14,0,12.1#Priority:1#InputOnlyLines:TrimTankInletValveToTrimTank#OutputOnlyLines:TrimTankToTrimTankPumpLeft,TrimTankToTrimTankPumpRight
+Tank.11 = Name:Trim#Title:FUEL TRIM#Capacity:6260.3#UnusableCapacity:0#Position:-87.14,0,12.1#Priority:1#InputOnlyLines:TrimTankInletValve1ToTrimTank,TrimTankInletValve2ToTrimTank#OutputOnlyLines:TrimTankToTrimTankPumpLeft,TrimTankToTrimTankPumpRight
 Line.1 = Name:FeedTank1ToFeed1TankPump1#Source:Feed1#Destination:Feed1TankPump1
 Line.2 = Name:FeedTank1ToFeed1TankPump2#Source:Feed1#Destination:Feed1TankPump2
 Line.3 = Name:FeedTank2ToFeed2TankPump1#Source:Feed2#Destination:Feed2TankPump1
@@ -237,7 +237,7 @@ Line.72 = Name:FwdGalleryJunctionToRightInnerFwdXferValve#Source:FwdGalleryJunct
 Line.73 = Name:FwdGalleryJunctionToRightMidFwdXferValve#Source:FwdGalleryJunction#Destination:RightMidFwdTransferValve
 Line.74 = Name:FwdGalleryJunctionToRightOuterFwdXferValve#Source:FwdGalleryJunction#Destination:RightOuterFwdTransferValve
 Line.75 = Name:FeedTank1FwdXferValve1ToFeedTank1#Source:FeedTank1FwdTransferValve1#Destination:Feed1#FuelFlowAt1PSI:0.001
-Line.79 = Name:FeedTank2FwdXferValve1_1ToFeedTank2#Source:FeedTank2FwdTransferValve1_1#Destination:Feed2#FuelFlowAt1PSI:100.0
+Line.76 = Name:FeedTank2FwdXferValve1_1ToFeedTank2#Source:FeedTank2FwdTransferValve1_1#Destination:Feed2#FuelFlowAt1PSI:100.0
 Line.77 = Name:FeedTank3FwdXferValve1_1ToFeedTank3#Source:FeedTank3FwdTransferValve1_1#Destination:Feed3#FuelFlowAt1PSI:100.0
 Line.78 = Name:FeedTank2FwdXferValve1_2ToFeedTank2#Source:FeedTank2FwdTransferValve1_2#Destination:Feed2#FuelFlowAt1PSI:100.0
 Line.79 = Name:FeedTank3FwdXferValve1_2ToFeedTank3#Source:FeedTank3FwdTransferValve1_2#Destination:Feed3#FuelFlowAt1PSI:100.0
