--- a/fbw-a380x/src/wasm/fbw_a380/CMakeLists.txt
+++ b/fbw-a380x/src/wasm/fbw_a380/CMakeLists.txt
@@ -69,6 +69,7 @@ add_executable(flybywire-a380x-fbw
     src/model/look2_binlcpw.cpp
     src/model/look2_binlxpw.cpp
     src/model/look2_pbinlxpw.cpp
+    src/model/maximum_Abpa9SzA.cpp
     src/model/mod_2RcCQkwc.cpp
     src/model/mod_mvZvttxs.cpp
     src/model/MultiWordIor.cpp
