--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -354,14 +354,14 @@ Valve.19 = Name:LeftOuterFwdTransferValve#Circuit:19
 Valve.20 = Name:RightInnerFwdTransferValve#Circuit:20
 Valve.21 = Name:RightMidFwdTransferValve#Circuit:21
 Valve.22 = Name:RightOuterFwdTransferValve#Circuit:22
-Valve.23 = Name:FeedTank1AftTransferValve1#Circuit:23
-Valve.24 = Name:FeedTank2AftTransferValve1#Circuit:24
-Valve.25 = Name:FeedTank3AftTransferValve1#Circuit:25
-Valve.26 = Name:FeedTank4AftTransferValve1#Circuit:26
-Valve.27 = Name:FeedTank1AftTransferValve2#Circuit:27
-Valve.28 = Name:FeedTank2AftTransferValve2#Circuit:28
-Valve.29 = Name:FeedTank3AftTransferValve2#Circuit:29
-Valve.30 = Name:FeedTank4AftTransferValve2#Circuit:30
+Valve.23 = Name:FeedTank1AftTransferValve1#Circuit:23 ; for main transfers from trim tank
+Valve.24 = Name:FeedTank2AftTransferValve1#Circuit:24 ; for main transfers from trim tank
+Valve.25 = Name:FeedTank3AftTransferValve1#Circuit:25 ; for main transfers from trim tank
+Valve.26 = Name:FeedTank4AftTransferValve1#Circuit:26 ; for main transfers from trim tank
+Valve.27 = Name:FeedTank1AftTransferValve2#Circuit:27 ; for CG transfers from trim tank
+Valve.28 = Name:FeedTank2AftTransferValve2#Circuit:28 ; for CG transfers from trim tank
+Valve.29 = Name:FeedTank3AftTransferValve2#Circuit:29 ; for CG transfers from trim tank
+Valve.30 = Name:FeedTank4AftTransferValve2#Circuit:30 ; for CG transfers from trim tank
 Valve.31 = Name:LeftInnerAftTransferValve1#Circuit:31
 Valve.32 = Name:LeftMidAftTransferValve1#Circuit:32
 Valve.33 = Name:LeftOuterAftTransferValve1#Circuit:33
@@ -376,7 +376,7 @@ Valve.41 = Name:RightMidAftTransferValve2#Circuit:41#DestinationLine:RightMidAft
 Valve.42 = Name:RightOuterAftTransferValve2#Circuit:42
 Valve.43 = Name:TrimTankInletValve1#Circuit:43#DestinationLine:TrimTankInletValve1ToTrimTank#Source
 Valve.44 = Name:TrimLineIsolationValveFwd#Circuit:44#DestinationLine:TrimLineIsoValveFwdToFwdGalleryJunction
-Valve.45 = Name:TrimLineIsolationValveAft_1#Circuit:45#DestinationLine:TrimLineIsoValveAft_1ToAftGalleryJunction  ; valve/line changed!
+Valve.45 = Name:TrimLineIsolationValveAft_1#Circuit:45#DestinationLine:TrimLineIsoValveAft_1ToAftGalleryJunction 
 Valve.46 = Name:CrossFeedValve1#OpeningTime:3#Circuit:46
 Valve.47 = Name:CrossFeedValve2#OpeningTime:3#Circuit:47
 Valve.48 = Name:CrossFeedValve3#OpeningTime:3#Circuit:48
@@ -390,8 +390,8 @@ Valve.55 = Name:GalleryAuxRefuelValveRight#OpeningTime:3#Circuit:55
 Valve.56 = Name:TransferDefuelValve#OpeningTime:3#Circuit:56
 Valve.57 = Name:JettisonNozzleValveLeft#Circuit:57
 Valve.58 = Name:JettisonNozzleValveRight#Circuit:58
-Valve.59 = Name:TrimLineIsolationValveAft_2#Circuit:59#DestinationLine:TrimLineIsoValveAft_2ToAftGalleryJunction    ; new
-Valve.60 = Name:TrimTankInletValve2#Circuit:60#DestinationLine:TrimTankInletValve2ToTrimTank#Source    ; new
+Valve.59 = Name:TrimLineIsolationValveAft_2#Circuit:59#DestinationLine:TrimLineIsoValveAft_2ToAftGalleryJunction 
+Valve.60 = Name:TrimTankInletValve2#Circuit:60#DestinationLine:TrimTankInletValve2ToTrimTank#Source   
 
 
 Pump.1 = Name:Feed1TankPump1#Pressure:30#DestinationLine:Pump1Feed1ToJunc1#TankFuelRequired:Feed1#Type:Electric#Index:1
@@ -456,8 +456,8 @@ Trigger.37 = Name:OuterTanksTransferToFeedTank1End#Target:Feed1#Threshold:1481#C
 Trigger.38 = Name:OuterTanksTransferToFeedTank2End#Target:Feed2#Threshold:1481#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank2FwdTransferValve1_1
 Trigger.39 = Name:OuterTanksTransferToFeedTank3End#Target:Feed3#Threshold:1481#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank3FwdTransferValve1_1
 Trigger.40 = Name:OuterTanksTransferToFeedTank4End#Target:Feed4#Threshold:1481#Condition:TankQuantityAbove#EffectTrue:CloseValve.FeedTank4FwdTransferValve1
-Trigger.41 = Name:CGControlTransferStart#Threshold:0.415#Condition:CGAboveLimit#EffectTrue:OpenValve.TrimLineIsolationValveAft_2,OpenValve.LeftInnerAftTransferValve1,OpenValve.RightInnerAftTransferValve1,OpenValve.LeftMidAftTransferValve1,OpenValve.RightMidAftTransferValve1,OpenValve.FeedTank1AftTransferValve1,OpenValve.FeedTank2AftTransferValve1,OpenValve.FeedTank3AftTransferValve1,OpenValve.FeedTank4AftTransferValve1,StartPump.TrimTankPumpLeft,StartPump.TrimTankPumpRight
-Trigger.42 = Name:CGControlTransferEnd#Threshold:0.405#Condition:CGBelowLimit#EffectTrue:CloseValve.TrimLineIsolationValveAft_2,CloseValve.LeftInnerAftTransferValve1,CloseValve.RightInnerAftTransferValve1,CloseValve.LeftMidAftTransferValve1,CloseValve.RightMidAftTransferValve1,CloseValve.FeedTank1AftTransferValve1,CloseValve.FeedTank2AftTransferValve1,CloseValve.FeedTank3AftTransferValve1,CloseValve.FeedTank4AftTransferValve1
+Trigger.41 = Name:CGControlTransferStart#Threshold:0.415#Condition:CGAboveLimit#EffectTrue:OpenValve.TrimLineIsolationValveAft_2,OpenValve.LeftInnerAftTransferValve1,OpenValve.RightInnerAftTransferValve1,OpenValve.LeftMidAftTransferValve1,OpenValve.RightMidAftTransferValve1,OpenValve.FeedTank1AftTransferValve2,OpenValve.FeedTank2AftTransferValve2,OpenValve.FeedTank3AftTransferValve2,OpenValve.FeedTank4AftTransferValve2,StartPump.TrimTankPumpLeft,StartPump.TrimTankPumpRight
+Trigger.42 = Name:CGControlTransferEnd#Threshold:0.405#Condition:CGBelowLimit#EffectTrue:CloseValve.TrimLineIsolationValveAft_2,CloseValve.LeftInnerAftTransferValve1,CloseValve.RightInnerAftTransferValve1,CloseValve.LeftMidAftTransferValve1,CloseValve.RightMidAftTransferValve1,CloseValve.FeedTank1AftTransferValve2,CloseValve.FeedTank2AftTransferValve2,CloseValve.FeedTank3AftTransferValve2,CloseValve.FeedTank4AftTransferValve2
 
 
 [AIRPLANE_GEOMETRY]
